--- a/Lab14Web_Cambio-master/package.json
+++ b/Lab14Web_Cambio-master/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29",
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
